FlexDeploy 8.0/_fdtlt84/objects/SFDX_Meta__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source_Format__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>meta.xml</fullName>
                </value>
                <value>
                    <fullName>object.xml</fullName>
                </value>
                <value>
                    <fullName>meta.mdapi</fullName>
                </value>
                <value>
                    <fullName>object.mdapi</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Format__c</fullName>
        <label>Source Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                    <default>true</default>
                    <label>SFDC</label>
                </value>
                <value>
                    <fullName>SFDX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SFDX Meta</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFDX-{0}</displayFormat>
        <label>SFDX Meta ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDX Meta</pluralLabel>
    <recordTypes>
        <fullName>Metadata_API</fullName>
        <active>true</active>
        <label>Metadata API</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_DX</fullName>
        <active>true</active>
        <label>Salesforce DX</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>SFDX_ASR__c</fullName>
        <label>SFDX ASR</label>
    </sharingReasons>
    <validationRules>
        <fullName>VL_Test</fullName>
        <active>true</active>
        <errorConditionFormula>CreatedDate &gt; NOW()+1</errorConditionFormula>
        <errorMessage>Created Date Validation Rule</errorMessage>
    </validationRules>
</CustomObject>